fix animation on safari

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,6 @@ a:hover, a:visited, a:link, a:active {
 }
 
 .air-button {
-
   background-color: rgba(255, 255, 255, 0.95);
   width: 30%;
   height: 100%;
@@ -288,9 +287,14 @@ html.is-animating .transition-fade {
 }
 
 .car {
+  -webkit-animation: fadeInRight;
   animation: fadeInRight;
+  -webkit-animation-duration: 1.4s;
   animation-duration: 1.4s;
+  -webkit-transition-timing-function: linear;
+  -o-transition-timing-function: linear;
   transition-timing-function: linear;
+  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
@@ -317,14 +321,12 @@ html.is-animating .transition-fade {
 }
 
 @keyframes rotate {
-  0%{
+  0% {
     transform: rotate(0deg)
-   }
-   
-   
-  100%{
+  }
+  100% {
     transform: rotate(-500deg)
-   }
+  }
 }
 
 @keyframes fadeInRight {
@@ -394,18 +396,18 @@ html.is-animating .transition-fade {
   border-radius: 5%;
   background-color: lightgray;
   height: 75%;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.iconbar{
+.iconbar {
   height: 20%;
   display: flex;
   justify-content: space-evenly;
 }
 
-.recent{
+.recent {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
